sparql/parser/sparql_parser.go
// Code generated from /home/lercher/go/src/github.com/lercher/rdf/sparql/Sparql.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // Sparql

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'BASE'", "'PREFIX'", "'SELECT'", "'DISTINCT'", "'REDUCED'", "'*'",
	"'CONSTRUCT'", "'DESCRIBE'", "'ASK'", "'FROM'", "'NAMED'", "'WHERE'", "'ORDER'",
	"'BY'", "'ASC'", "'DESC'", "'LIMIT'", "'OFFSET'", "'{'", "'.'", "'}'",
	"'OPTIONAL'", "'GRAPH'", "'UNION'", "'FILTER'", "'('", "','", "')'", "';'",
	"'A'", "'['", "']'", "'||'", "'&&'", "'='", "'!='", "'<'", "'>'", "'<='",
	"'>='", "'+'", "'-'", "'/'", "'!'", "'STR'", "'LANG'", "'LANGMATCHES'",
	"'DATATYPE'", "'BOUND'", "'SAMETERM'", "'ISIRI'", "'ISURI'", "'ISBLANK'",
	"'ISLITERAL'", "'REGEX'", "'^^'", "'true'", "'false'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "IRI_REF", "PNAME_NS", "PNAME_LN", "BLANK_NODE_LABEL",
	"VAR1", "VAR2", "LANGTAG", "INTEGER", "DECIMAL", "DOUBLE", "INTEGER_POSITIVE",
	"DECIMAL_POSITIVE", "DOUBLE_POSITIVE", "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE",
	"DOUBLE_NEGATIVE", "EXPONENT", "STRING_LITERAL1", "STRING_LITERAL2", "STRING_LITERAL_LONG1",
	"STRING_LITERAL_LONG2", "ECHAR", "NIL", "ANON", "PN_CHARS_U", "VARNAME",
	"PN_PREFIX", "PN_LOCAL", "WS",
}

var ruleNames = []string{
	"query", "prologue", "baseDecl", "prefixDecl", "selectQuery", "constructQuery",
	"describeQuery", "askQuery", "datasetClause", "defaultGraphClause", "namedGraphClause",
	"sourceSelector", "whereClause", "solutionModifier", "limitOffsetClauses",
	"orderClause", "orderCondition", "limitClause", "offsetClause", "groupGraphPattern",
	"triplesBlock", "graphPatternNotTriples", "optionalGraphPattern", "graphGraphPattern",
	"groupOrUnionGraphPattern", "filter", "constraint", "functionCall", "argList",
	"constructTemplate", "constructTriples", "triplesSameSubject", "propertyListNotEmpty",
	"propertyList", "objectList", "object", "verb", "triplesNode", "blankNodePropertyList",
	"collection", "graphNode", "varOrTerm", "varOrIRIref", "varx", "graphTerm",
	"expression", "conditionalOrExpression", "conditionalAndExpression", "valueLogical",
	"relationalExpression", "numericExpression", "additiveExpression", "multiplicativeExpression",
	"unaryExpression", "primaryExpression", "brackettedExpression", "builtInCall",
	"regexExpression", "iriRefOrFunction", "rdfLiteral", "numericLiteral",
	"numericLiteralUnsigned", "numericLiteralPositive", "numericLiteralNegative",
	"booleanLiteral", "rdfstring", "iriRef", "prefixedName", "blankNode",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SparqlParser struct {
	*antlr.BaseParser
}

func NewSparqlParser(input antlr.TokenStream) *SparqlParser {
	this := new(SparqlParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Sparql.g4"

	return this
}

// SparqlParser tokens.
const (
	SparqlParserEOF                  = antlr.TokenEOF
	SparqlParserT__0                 = 1
	SparqlParserT__1                 = 2
	SparqlParserT__2                 = 3
	SparqlParserT__3                 = 4
	SparqlParserT__4                 = 5
	SparqlParserT__5                 = 6
	SparqlParserT__6                 = 7
	SparqlParserT__7                 = 8
	SparqlParserT__8                 = 9
	SparqlParserT__9                 = 10
	SparqlParserT__10                = 11
	SparqlParserT__11                = 12
	SparqlParserT__12                = 13
	SparqlParserT__13                = 14
	SparqlParserT__14                = 15
	SparqlParserT__15                = 16
	SparqlParserT__16                = 17
	SparqlParserT__17                = 18
	SparqlParserT__18                = 19
	SparqlParserT__19                = 20
	SparqlParserT__20                = 21
	SparqlParserT__21                = 22
	SparqlParserT__22                = 23
	SparqlParserT__23                = 24
	SparqlParserT__24                = 25
	SparqlParserT__25                = 26
	SparqlParserT__26                = 27
	SparqlParserT__27                = 28
	SparqlParserT__28                = 29
	SparqlParserT__29                = 30
	SparqlParserT__30                = 31
	SparqlParserT__31                = 32
	SparqlParserT__32                = 33
	SparqlParserT__33                = 34
	SparqlParserT__34                = 35
	SparqlParserT__35                = 36
	SparqlParserT__36                = 37
	SparqlParserT__37                = 38
	SparqlParserT__38                = 39
	SparqlParserT__39                = 40
	SparqlParserT__40                = 41
	SparqlParserT__41                = 42
	SparqlParserT__42                = 43
	SparqlParserT__43                = 44
	SparqlParserT__44                = 45
	SparqlParserT__45                = 46
	SparqlParserT__46                = 47
	SparqlParserT__47                = 48
	SparqlParserT__48                = 49
	SparqlParserT__49                = 50
	SparqlParserT__50                = 51
	SparqlParserT__51                = 52
	SparqlParserT__52                = 53
	SparqlParserT__53                = 54
	SparqlParserT__54                = 55
	SparqlParserT__55                = 56
	SparqlParserT__56                = 57
	SparqlParserT__57                = 58
	SparqlParserIRI_REF              = 59
	SparqlParserPNAME_NS             = 60
	SparqlParserPNAME_LN             = 61
	SparqlParserBLANK_NODE_LABEL     = 62
	SparqlParserVAR1                 = 63
	SparqlParserVAR2                 = 64
	SparqlParserLANGTAG              = 65
	SparqlParserINTEGER              = 66
	SparqlParserDECIMAL              = 67
	SparqlParserDOUBLE               = 68
	SparqlParserINTEGER_POSITIVE     = 69
	SparqlParserDECIMAL_POSITIVE     = 70
	SparqlParserDOUBLE_POSITIVE      = 71
	SparqlParserINTEGER_NEGATIVE     = 72
	SparqlParserDECIMAL_NEGATIVE     = 73
	SparqlParserDOUBLE_NEGATIVE      = 74
	SparqlParserEXPONENT             = 75
	SparqlParserSTRING_LITERAL1      = 76
	SparqlParserSTRING_LITERAL2      = 77
	SparqlParserSTRING_LITERAL_LONG1 = 78
	SparqlParserSTRING_LITERAL_LONG2 = 79
	SparqlParserECHAR                = 80
	SparqlParserNIL                  = 81
	SparqlParserANON                 = 82
	SparqlParserPN_CHARS_U           = 83
	SparqlParserVARNAME              = 84
	SparqlParserPN_PREFIX            = 85
	SparqlParserPN_LOCAL             = 86
	SparqlParserWS                   = 87
)

// SparqlParser rules.
const (
	SparqlParserRULE_query                    = 0
	SparqlParserRULE_prologue                 = 1
	SparqlParserRULE_baseDecl                 = 2
	SparqlParserRULE_prefixDecl               = 3
	SparqlParserRULE_selectQuery              = 4
	SparqlParserRULE_constructQuery           = 5
	SparqlParserRULE_describeQuery            = 6
	SparqlParserRULE_askQuery                 = 7
	SparqlParserRULE_datasetClause            = 8
	SparqlParserRULE_defaultGraphClause       = 9
	SparqlParserRULE_namedGraphClause         = 10
	SparqlParserRULE_sourceSelector           = 11
	SparqlParserRULE_whereClause              = 12
	SparqlParserRULE_solutionModifier         = 13
	SparqlParserRULE_limitOffsetClauses       = 14
	SparqlParserRULE_orderClause              = 15
	SparqlParserRULE_orderCondition           = 16
	SparqlParserRULE_limitClause              = 17
	SparqlParserRULE_offsetClause             = 18
	SparqlParserRULE_groupGraphPattern        = 19
	SparqlParserRULE_triplesBlock             = 20
	SparqlParserRULE_graphPatternNotTriples   = 21
	SparqlParserRULE_optionalGraphPattern     = 22
	SparqlParserRULE_graphGraphPattern        = 23
	SparqlParserRULE_groupOrUnionGraphPattern = 24
	SparqlParserRULE_filter                   = 25
	SparqlParserRULE_constraint               = 26
	SparqlParserRULE_functionCall             = 27
	SparqlParserRULE_argList                  = 28
	SparqlParserRULE_constructTemplate        = 29
	SparqlParserRULE_constructTriples         = 30
	SparqlParserRULE_triplesSameSubject       = 31
	SparqlParserRULE_propertyListNotEmpty     = 32
	SparqlParserRULE_propertyList             = 33
	SparqlParserRULE_objectList               = 34
	SparqlParserRULE_object                   = 35
	SparqlParserRULE_verb                     = 36
	SparqlParserRULE_triplesNode              = 37
	SparqlParserRULE_blankNodePropertyList    = 38
	SparqlParserRULE_collection               = 39
	SparqlParserRULE_graphNode                = 40
	SparqlParserRULE_varOrTerm                = 41
	SparqlParserRULE_varOrIRIref              = 42
	SparqlParserRULE_varx                     = 43
	SparqlParserRULE_graphTerm                = 44
	SparqlParserRULE_expression               = 45
	SparqlParserRULE_conditionalOrExpression  = 46
	SparqlParserRULE_conditionalAndExpression = 47
	SparqlParserRULE_valueLogical             = 48
	SparqlParserRULE_relationalExpression     = 49
	SparqlParserRULE_numericExpression        = 50
	SparqlParserRULE_additiveExpression       = 51
	SparqlParserRULE_multiplicativeExpression = 52
	SparqlParserRULE_unaryExpression          = 53
	SparqlParserRULE_primaryExpression        = 54
	SparqlParserRULE_brackettedExpression     = 55
	SparqlParserRULE_builtInCall              = 56
	SparqlParserRULE_regexExpression          = 57
	SparqlParserRULE_iriRefOrFunction         = 58
	SparqlParserRULE_rdfLiteral               = 59
	SparqlParserRULE_numericLiteral           = 60
	SparqlParserRULE_numericLiteralUnsigned   = 61
	SparqlParserRULE_numericLiteralPositive   = 62
	SparqlParserRULE_numericLiteralNegative   = 63
	SparqlParserRULE_booleanLiteral           = 64
	SparqlParserRULE_rdfstring                = 65
	SparqlParserRULE_iriRef                   = 66
	SparqlParserRULE_prefixedName             = 67
	SparqlParserRULE_blankNode                = 68
)

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SparqlParserRULE_query
	return p
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SparqlParserRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) Prologue() IPrologueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPrologueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPrologueContext)
}

func (s *QueryContext) EOF() antlr.TerminalNode {
	return s.GetToken(SparqlParserEOF, 0)
}

func (s *QueryContext) SelectQuery() ISelectQueryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelectQueryContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISelectQueryContext)
}

func (s *QueryContext) ConstructQuery() IConstructQueryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConstructQueryContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConstructQueryContext)
}

func (s *QueryContext) DescribeQuery() IDescribeQueryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDescribeQueryContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDescribeQueryContext)
}

func (s *QueryContext) AskQuery() IAskQueryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAskQueryContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAskQueryContext)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SparqlListener); ok {
		listenerT.EnterQuery(s)
	}
}

func (s *QueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SparqlListener); ok {
		listenerT.ExitQuery(s)
	}
}

func (p *SparqlParser) Query() (localctx IQueryContext) {
	localctx = NewQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SparqlParserRULE_query)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(138)
		p.Prologue()
	}
	p.SetState(143)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SparqlParserT__2:
		{
			p.SetState(139)
			p.SelectQuery()
		}

	case SparqlParserT__6:
		{
			p.SetState(140)
			p.ConstructQuery()
		}

	case SparqlParserT__7:
		{
			p.SetState(141)
			p.DescribeQuery()
		}

	case SparqlParserT__8:
		{
			p.SetState(142)
			p.AskQuery()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}
	{
		p.SetState(145)
		p.Match(SparqlParserEOF)
	}

	return localctx
}

// IPrologueContext is an interface to support dynamic dispatch.
type IPrologueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPrologueContext differentiates from other interfaces.
	IsPrologueContext()
}

type PrologueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPrologueContext() *PrologueContext {
	var p = new(PrologueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SparqlParserRULE_prologue
	return p
}

func (*PrologueContext) IsPrologueContext() {}

func NewPrologueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PrologueContext {
	var p = new(PrologueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SparqlParserRULE_prologue

	return p
}

func (s *PrologueContext) GetParser() antlr.Parser { return s.parser }

func (s *PrologueContext) BaseDecl() IBaseDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBaseDeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBaseDeclContext)
}

func (s *PrologueContext) AllPrefixDecl() []IPrefixDeclContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IPrefixDeclContext)(nil)).Elem())
	var tst = make([]IPrefixDeclContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IPrefixDeclContext)
		}
	}

	return tst
}

func (s *PrologueContext) PrefixDecl(i int) IPrefixDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPrefixDeclContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IPrefixDeclContext)
}

func (s *PrologueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PrologueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PrologueContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SparqlListener); ok {
		listenerT.EnterPrologue(s)
	}
}

func (s *PrologueContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SparqlListener); ok {
		listenerT.ExitPrologue(s)
	}
}

func (p *SparqlParser) Prologue() (localctx IPrologueContext) {
	localctx = NewPrologueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SparqlParserRULE_prologue)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(148)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SparqlParserT__0 {
		{
			p.SetState(147)
			p.BaseDecl()
		}

	}
	p.SetState(153)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == SparqlParserT__1 {
		{
			p.SetState(150)
			p.PrefixDecl()
		}

		p.SetState(155)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IBaseDeclContext is an interface to support dynamic dispatch.
type IBaseDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetIri returns the iri token.
	GetIri() antlr.Token

	// SetIri sets the iri token.
	SetIri(antlr.Token)

	// IsBaseDeclContext differentiates from other interfaces.
	IsBaseDeclContext()
}

type BaseDeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	iri    antlr.Token
}

func NewEmptyBaseDeclContext() *BaseDeclContext {
	var p = new(BaseDeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SparqlParserRULE_baseDecl
	return p
}

func (*BaseDeclContext) IsBaseDeclContext() {}

func NewBaseDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BaseDeclContext {
	var p = new(BaseDeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SparqlParserRULE_baseDecl

	return p
}

func (s *BaseDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *BaseDeclContext) GetIri() antlr.Token { return s.iri }

func (s *BaseDeclContext) SetIri(v antlr.Token) { s.iri = v }

func (s *BaseDeclContext) IRI_REF() antlr.TerminalNode {
	return s.GetToken(SparqlParserIRI_REF, 0)
}

func (s *BaseDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BaseDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BaseDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SparqlListener); ok {
		listenerT.EnterBaseDecl(s)
	}
}

func (s *BaseDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SparqlListener); ok {
		listenerT.ExitBaseDecl(s)
	}
}

func (p *SparqlParser) BaseDecl() (localctx IBaseDeclContext) {
	localctx = NewBaseDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SparqlParserRULE_baseDecl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(156)
		p.Match(SparqlParserT__0)
	}
	{
		p.SetState(157)

		var _m = p.Match(SparqlParserIRI_REF)

		localctx.(*BaseDeclContext).iri = _m
	}

	return localctx
}

// IPrefixDeclContext is an interface to support dynamic dispatch.
type IPrefixDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetPrefix returns the prefix token.
	GetPrefix() antlr.Token

	// GetIri returns the iri token.
	GetIri() antlr.Token

	// SetPrefix sets the prefix token.
	SetPrefix(antlr.Token)

	// SetIri sets the iri token.
	SetIri(antlr.Token)

	// IsPrefixDeclContext differentiates from other interfaces.
	IsPrefixDeclContext()
}
